Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17087

uninitialized statfs may cause some MDTs never chosen to mkdir

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      On client, the initial statfs to some MDTs may not succeed upon mount (maybe due to network issues), then if the filesystem is imbalanced, those MDTs won't get chance to be chosen in mkdir.

            laisiyao Lai Siyao
            laisiyao Lai Siyao
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: